--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 .map {
     width: 1100px;
     height: 600px;
-    background-color: #333;
+/*     background-color: #333; */
 }
 
 /*[class*="copyrights-pane"] {
 	display: none !important;
 } */
 
-[class*="ground-pane"] {
+/* [class*="ground-pane"] {
     filter: hue-rotate(1);
-} 
+}  */
